test/mulberry/Language/for_scope_error.mulberry
# RUN: not mulberry-driver -typecheck %s 2>&1 | FileCheck %s

fn main(): UInt64 {
  for i in 0 .. 3 {
  }

  return i;
}

# CHECK: error: undefined variable
